--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,94 @@ html {
 
 body {
   font-family: 'Poppins', sans-serif;
+  line-height: 1.6;
+}
+
+.container {
+  width: 35rem;
+  max-width: 100vw;
+  height: 100vh;
+  padding: 2rem 1rem;
+  margin:  0 auto;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 1.8rem;
+  color: #553939;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  /* border: .1rem solid #000; */
+  padding: 1rem 0;
+}
+
+h4 {
+  text-align: center;
+  font-size: 1.6rem;
+  color: #704f4f;
+}
+
+input {
+  width: 100%;
+  padding: 1rem 0 1rem .5rem;
+  border: 0;
+  border-bottom: .1rem solid #a77979;
+  outline: none;
+  color: #a77979;
+}
+
+input::placeholder {
+  color: #a77979;
+  font-size: 1.4rem;
+  letter-spacing: .1rem;
+}
+
+.input-period input {
+  cursor: pointer;
+}
+
+.priority {
+  margin-bottom: 2rem;
+}
+
+.priority h5, .category h5{
+  margin-bottom: 1.5rem;
+  font-size: 1.4rem;
+  letter-spacing: 0.05rem;
+}
+
+.category-list, .priority-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.category-list button,
+.priority-list button {
+  padding: 1.2rem 2rem;
+  border-radius: .5rem;
+  border: .1rem solid #a77979;
+  font-size: 1.3rem;
+  font-weight: 900;
+  cursor: pointer;
+}
+
+.category button {
+  border: none;
+}
+
+.category button:nth-child(1) {
+  background: lightgreen;
+}
+.category button:nth-child(2) {
+  background: lightgray;
+  color: blueviolet;
+}
+.category button:nth-child(3) {
+  background: pink;
+  color: purple;
 }
