--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,22 @@ body {
 }
 
 h2 {
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  margin-bottom: 2rem;
-  font-size: 1.8rem;
-  color: #553939;
+}
+
+h2 span:nth-child(1) {
+  font-size: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 1rem;
+}
+
+h2 span:nth-child(2) {
+  font-size: 1.6rem;
+  word-spacing: .2rem;
+  letter-spacing: .1rem;
+  font-weight: 400;
 }
 
 main {
@@ -67,7 +79,7 @@ input::placeholder {
 
 .priority h5, .category h5{
   margin-bottom: 1.5rem;
-  font-size: 1.4rem;
+  font-size: 1.5rem;
   letter-spacing: 0.05rem;
 }
 
@@ -81,7 +93,7 @@ input::placeholder {
   padding: 1.2rem 2rem;
   border-radius: .5rem;
   border: .1rem solid #a77979;
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 900;
   cursor: pointer;
 }
