--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
 .container {
   width: 35rem;
   max-width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   padding: 2rem 1rem;
   margin:  0 auto;
 }
