--- a/src/index.css
+++ b/src/index.css
@@ -114,9 +114,30 @@ input::placeholder {
   color: purple;
 }
 
+.submit-btn {
+  display: inline-block;
+  padding: 1.5rem 0;
+  border: 0;
+  background: goldenrod;
+  color: antiquewhite;
+  font-size: 1.6rem;
+  font-weight: bold;
+  letter-spacing: .15rem;
+  text-transform: uppercase;
+  border-radius: .5rem;
+  margin-top: 1rem;
+  cursor: pointer;
+}
+
+.submit-btn:hover {
+  background: green;
+  transition: .4s ease;
+}
+
 /* TASKLIST */
 .tasklist {
   margin-top: 5rem;
+  margin-bottom: 5rem;
   height: 50vh;
   box-shadow: rgba(0,0,0,0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   padding: 1rem 3rem;
