Pass data-props-value to the TaskItem and render it. Change a bit in the structure of the TaskItem-component and also make some chnages in styling

--- a/src/index.css
+++ b/src/index.css
@@ -246,9 +246,15 @@ input::placeholder {
   letter-spacing: .1rem;
 }
 
-.tasklist-item .others .time {
-  align-self: flex-end;
-  font-size: 1.5rem;
+.tasklist-item .others .period {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.tasklist-item .others .period .date,
+.tasklist-item .others .period .time {
+  font-size: 1.3rem;
   font-weight: bold;
 }
 
