--- a/src/index.css
+++ b/src/index.css
@@ -144,7 +144,7 @@ input::placeholder {
   margin-bottom: 5rem;
   height: 50vh;
   box-shadow: rgba(0,0,0,0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
-  padding: 1rem 3rem;
+  padding: 1rem 1.5rem;
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -234,15 +234,20 @@ input::placeholder {
 
 .tasklist-item .others .task .icon {
   display: inline-block;
-  width: 3rem;
-  height: 3rem;
+  width: 2.5rem;
+  height: 2.5rem;
   cursor: pointer;
+}
+
+.tasklist-item .others .task .icon svg {
+  width: 100%;
+  height: 100%;
 }
 
 .tasklist-item .others .task p {
   max-width: 100%;
-  font-size: 1.5rem;
-  font-weight: 400;
+  font-size: 1.6rem;
+  font-weight: 600;
   letter-spacing: .1rem;
 }
 
