Refactor the formatTime-function and Set checked-state and a function to modify it when we click on the checked-icon

--- a/src/index.css
+++ b/src/index.css
@@ -281,6 +281,14 @@ input::placeholder {
   letter-spacing: .1rem;
 }
 
+/* Dynamic Class */
+.tasklist-item .others .task p.line {
+  text-decoration: line-through;
+  opacity: .5;
+  user-select: none;
+}
+/* End of Dynamic Class */
+
 .tasklist-item .others .period {
   margin-top: 1rem;
   display: flex;
