--- a/src/index.css
+++ b/src/index.css
@@ -197,6 +197,11 @@ input::placeholder {
   box-shadow: rgba(67, 71, 85, .27) 0px 0px .25em, rgba(90, 125, 188, 0.05) 0px .25em 1em;
 }
 
+.tasklist-item.slide {
+  transform: translateX(110%);
+  transition: transform 1s ease-out;
+}
+
 .tasklist-item .category {
   position: absolute;
   top: -10%;
