--- a/src/index.css
+++ b/src/index.css
@@ -104,7 +104,7 @@ input {
   border: 0;
   border-bottom: .1rem solid #a77979;
   outline: none;
-  color: #a77979;
+  color: #1b1b1b;
 }
 
 input::placeholder {
@@ -327,9 +327,9 @@ input::placeholder {
 
 .tasklist-item .others .task p {
   max-width: 100%;
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-weight: 600;
-  letter-spacing: .1rem;
+  text-transform: capitalize;
 }
 
 /* Dynamic Class */
