--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,6 @@ main {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  /* border: .1rem solid #000; */
   padding: 1rem 0;
 }
 
@@ -365,4 +364,56 @@ input::placeholder {
   font-size: 1.3rem;
   font-weight: bold;
 }
+
+/* REGISTER PAGE */
+.form-main {
+  margin-top: 30%;
+}
+
+.form-title {
+  text-align: center;
+  font-size: 2rem;
+  color: #252525;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+form button {
+  display: inline-block;
+  padding: 1.2rem 0;
+  border: 0;
+  background: goldenrod;
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 600;
+  letter-spacing: .1rem;
+  cursor: pointer;
+  border-radius: .3rem;
+  margin-top: 2rem;
+}
+
+form button:focus {
+  background: green;
+}
+
+form p {
+  font-size: 1.4rem;
+}
+
+form p span {
+  display: inline-block;
+  margin-left: 1rem;
+  color: green;
+  font-weight: bold;
+  text-decoration: underline;
+  font-size: 1.45rem;
+  cursor: pointer;
+  letter-spacing: .1rem;
+}
+
+/* END OF REGISTER PAGE */
 
