Clearing the error-message after few seconds using useEffect hook and setTimeout

--- a/src/index.css
+++ b/src/index.css
@@ -383,8 +383,12 @@ input::placeholder {
   font-weight: bold;
   padding: .5rem;
   background: red;
-  border-radius: 5rem;
   word-spacing: .2rem;
+  text-transform: capitalize;
+}
+
+.form-error.hidden {
+  display: none;
 }
 
 form {
