Fixed issue of reappearing firebaseError-state after each render of the Login/Register Pages. This was caused by the way logic in the authHandler-function was written. fireBaseError-state will now be cleared using setTimeout function.

--- a/src/index.css
+++ b/src/index.css
@@ -445,6 +445,7 @@ form p .link {
   margin-left: 1rem;
   color: green;
   font-weight: bold;
+  text-transform: capitalize;
   text-decoration: underline;
   font-size: 1.45rem;
   cursor: pointer;
