Fix some taskList style

--- a/src/index.css
+++ b/src/index.css
@@ -200,8 +200,8 @@ input::placeholder {
 /* TASKLIST */
 .tasklist {
   margin-top: 2rem;
-  margin-bottom: 5rem;
-  height: 50vh;
+  margin-bottom: 2rem;
+  min-height: 30vh;
   box-shadow: rgba(0,0,0,0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
   padding: 1rem 1.5rem;
   overflow-y: auto;
